tests/errors/runtime.SymbolNotFound.art
x: 2
print y + x
print "hello!"